Fix main nav initial placement on mobile landscape

--- a/assets/scss/components/navigation/_main-navigation.scss
+++ b/assets/scss/components/navigation/_main-navigation.scss
@@ -12,6 +12,10 @@
 	
 	transform: translateY(-300%);
 	transition: transform .5s ease-in-out;
+	
+	@media(orientation: landscape) and (max-height: 48em) {
+		transform: translateY(-500%);
+	}
 
 	@media (max-width: 63.9375em) {
 		.no-scroll & {
